--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,13 @@ spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.enabled=true
+
+
+
+server.port=8582
