--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=EdufyAlbumForArtist
-spring.datasource.url=jdbc:h2:mem:EdufyAlbumForArtistDB
+spring.application.name=ArtistService
+spring.datasource.url=jdbc:h2:mem:ArtistDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -7,14 +7,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-
-
+server.port=8587
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.enabled=true
-
-
-
-server.port=8582
+eureka.client.enabled=false
