--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.application.name=ArtistService
-spring.datasource.url=jdbc:h2:mem:ArtistDB
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/unifieddb
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8587
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.enabled=false
+
+server.port=8587
