--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.sql.init.mode=always
 
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.client.enabled=false
 
-server.port=8587
+server.port=8595
